--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -41,9 +41,40 @@ h1,h2{
   }
 }
 
+h1 {
+  color: white;
+}
 
 
 
 a {
   text-decoration: none;
+}
+
+::selection {
+  background-color: #B0EB00;
+  color: white; 
+}
+
+
+::-webkit-scrollbar {
+  width: 10px; 
+  height: 10px;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #B0EB00;
+  border-radius: 10px; 
+}
+
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: #A5D600; 
 }
