--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@
 @import 'stylesheets/color.scss';
 @import 'stylesheets/map.scss';
 @import 'stylesheets/sound.scss';
+@import 'stylesheets/styleguide.scss';
 
