--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -47,3 +47,37 @@ h1,h2{
 a {
   text-decoration: none;
 }
+
+.image {
+  &#bgWEBP {
+    background-image: url('../images/styleguide/background_grad.webp');
+    background-image: url('../images/styleguide/logotype_black.webp');
+    background-image: url('../images/styleguide/collage.webp');
+    background-image: url('../images/styleguide/logo_green.webp');
+    background-image: url('../images/styleguide/measure_green.webp');
+
+    background-image: url('../images/styleguide/measure_black.webp');
+    background-image: url('../images/styleguide/ohrannoe.webp');
+    background-image: url('../images/styleguide/collab.webp');
+    background-image: url('../images/styleguide/cvetovie_pari.webp');
+    background-image: url('../images/styleguide/blue_on_green.webp');
+    background-image: url('../images/styleguide/ex_web1.webp');
+    background-image: url('../images/styleguide/ex_fiz1.webp');
+    background-image: url('../images/styleguide/favicon.webp');
+    background-image: url('../images/styleguide/black_on_red.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/no_contrast.webp');
+    background-image: url('../images/styleguide/defor.webp');
+    background-image: url('../images/styleguide/pol_treking.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    background-image: url('../images/styleguide/otstupi.webp');
+    
+    
+  }
+}
