--- a/src/stylesheets/styleguide.scss
+++ b/src/stylesheets/styleguide.scss
@@ -29,10 +29,10 @@
     h3{
         color: #B0EB00;
         font-size: 8vw;
-        letter-spacing:-0.6vw;
+        letter-spacing:-0.7vw;
         font-weight: 600;
         margin-bottom: 4%;
-        margin-left: -0.3%;
+        margin-left: -0.5%;
     }
     h4{
         color: #B0EB00;
@@ -45,6 +45,7 @@
     button{
         background-color: #B0EB00;
         border-style: none;
+        box-shadow: whitesmoke 0px -0px 20px 5px;
         letter-spacing:-0.5rem;
         width: 8.5%;
         
@@ -248,11 +249,45 @@
         margin-left: 24%;
     }
 
-    .text_6{
+    .text_66{
         position: absolute;
         margin-top: 30%;
         margin-left: 92%;
         width: 58%;
+    }
+
+    .fon{
+        margin-top: 0%;
+        margin-left: 22%;
+        width: 40%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+    .black_back{
+    width: 65%;
+    height: 65%;
+    margin-right: -20%;
+    }
+
+    .blue_back{
+        width: 65%;
+    height: 65%;
+    }
+
+    .fon_white{
+        margin-top: 0%;
+        margin-left: 22%;
+        width: 40%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+    .white_back{
+    width: 66.5%;
+    height: 65%;
+    margin-right: -20%;
+    margin-left: 37.2%;
     }
 
   
@@ -263,5 +298,387 @@
     .favicon{
      width: 10%;
      }
+
+     .coloors{
+        width: 50%;
+        margin-left: 36.5%;
+     }
+     .color_v_webe{
+        margin-left: 36.5%;
+     }
+    
+     .fonts_name{
+        margin-top: 0%;
+        margin-left: 29%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .arial_bold{
+       font-weight: 700;
+    }
+
+    .logo_250{
+        margin-top: 0%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .logo_size{
+        margin-left: -1%;
+        margin-right:10% ;
+    }
+
+
+    .header_128{
+        margin-top: 0%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .header{
+        margin-right: -4%;
+    }
+
+    .logo_size_128{
+        width: 21%;
+        margin-left: -1%;
+        margin-right:29% ;
+    }
+
+    .subheader_48{
+        margin-top: 3%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .subheader{
+        margin-right: -10%;
+    }
+
+    .logo_size_48{
+        margin-top: 1%;
+        width: 10%;
+        margin-left: -1%;
+        margin-right:40% ;
+    }
+
+    .body_32{
+        margin-top: 3%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .body_1{
+        margin-right: 12%;
+    }
+
+    .text_size_32{
+        margin-top: 0.5%;
+        font-weight: 700;
+        font-size: 2.5vw;
+        margin-left: -1%;
+        margin-right:41% ;
+    }
+
+    .body_24{
+        margin-top: 3%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .body_2{
+        margin-right: 12%;
+    }
+
+    .text_size_24{
+        margin-top: 2%;
+        margin-left: -1%;
+        margin-right:44.5% ;
+    }
+
+
+    .trecking{
+        margin-top: 3%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .treck_11{
+        margin-right: 12%;
+    }
+
+
+    .logo_treck{
+        margin-top: -12%;
+        margin-left: -10%;
+        margin-right:36% ;
+    }
+
+    .trecking_2{
+        margin-top: 3%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+        margin-bottom: 6%;
+    }
+
+    .treck_0{
+        margin-right: 12%;
+    }
+
+    .text_treck{
+        margin-top: 1.5%;
+        margin-left: -4%;
+        margin-right:90% ;
+    }
+
+    .rasstoyanie{
+        margin-top: -2%;
+        margin-left: 37.4%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+        margin-bottom: 3%;
+    }
+
+    .ploho{
+        display: block;
+        justify-content: center;
+    }
+
+    .horosho{
+        display: block;
+        justify-content: center;
+        margin-right: 15%;
+    }
+    
+    .klik_1{
+        font-size: 13vw;
+        letter-spacing:-1.4vw;
+        font-weight: 700;
+    }
+
+    .klik_2{
+        font-size: 13vw;
+        letter-spacing:-1.6vw;
+        font-weight: 700;
+    }
+
+    .na_nositelyah{
+        margin-top: 3%;
+        margin-left: 14%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .ex_lecture{
+        margin-right: -28%;
+    }
+
+    .desktop{
+        margin-top: 3%;
+        margin-left: 14%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .grid_desktop{
+     width: 100%;
+     margin-left: 0%;
+     margin-top: -2%;
+    }
+
+    .desktop_text, .text_24{
+        margin-top: 2%;
+    }
+    .text_24{
+      margin-right: 8%;
+    }
+    
+
+    .desktop_text{
+        
+        margin-right: -14%;
+    }
+    
+
+    .laptop_mobile{
+        margin-top: 0%;
+        
+        width: 50%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .text_12{
+        margin-left: -71%;
+    }
+
+.grid_laptop{
+    width: 83%;
+    margin-left: -23.5%;
+    margin-top: -6%;
+}
+
+    .grids{
+        margin-top: 3%;
+        margin-left: 14%;
+        width: 60%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+    
+    .grid_mobile{
+        width: 42%;
+    margin-left: 7.5%;
+    margin-top: -6%;
+    }
+
+    .mobile_text{
+        margin-right: -25%;
+    }
+
+    .text_6{
+        margin-top: 0%;
+        margin-left: 134%;
+    }
+
+    .prir_chaos{
+        margin-left: -9%;
+    }
+    
+    .quadro{
+        width: 25%;
+    }
+
+    .ex_main{
+        width: 50%;
+    }
+
+    .pechat_4{
+        margin-left: 38%;
+        margin-bottom: 0.5%;
+    }
+
+    .pechat{
+        width: 17%;
+    }
+
+    .opisanie_graph{
+        margin-top: 3%;
+        margin-left: 1%;
+        width: 90%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .style_text{
+        margin-right: 4%;
+    }
+
+    .filtrs{
+        margin-top: 3%;
+        margin-left: 13%;
+        width: 65%;
+        margin-bottom: -4%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .filtr_none{
+        margin-right: -33%;
+    }
+
+    .filtrs_text{
+        margin-top:-0.5%;
+        margin-left: 31.5%;
+        width: 45%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .filtr_half_text{
+        margin-right: 12%;
+    }
+
+    .filtr_post{
+        width: 26%;
+        margin-left: 37.7%;
+    }
+
+    .post_text{
+        margin-top: -7%;
+        margin-left: 23.6%;
+    }
+
+
+    .filtrs_ploho{
+        margin-top: 3%;
+        margin-left: 13%;
+        width: 65%;
+        margin-bottom: -4%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .filtrs_text_ploho{
+        margin-top:-0.5%;
+        margin-left: 31.5%;
+        width: 45%;
+        position: relative;
+        display: inline-flex;
+        justify-content: space-between;
+    }
+
+    .filtr_ploho_1{
+        margin-right: -33%;
+    }
+
+
+    .filtr_half_coal{
+        margin-right: 16%;
+    }
+
+    .layers{
+        width: 54.8%;
+    }
+
+    
+
+
     
 }
