--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -88,9 +88,18 @@ a {
     background-image: url('../images/styleguide/filtr_ploho_1.webp');
     background-image: url('../images/styleguide/filtr_ploho_2.webp');
     background-image: url('../images/styleguide/layers.webp');
-    background-image: url('../images/styleguide/ex_main.webp');
-    background-image: url('../images/styleguide/ex_main.webp');
-    background-image: url('../images/styleguide/ex_main.webp');
+    background-image: url('../images/styleguide/rebrand.webp');
+    background-image: url('../images/styleguide/present.webp');
+    background-image: url('../images/styleguide/plastic.webp');
+    background-image: url('../images/index/tg.webp');
+    background-image: url('../images/index/vk.webp');
+    background-image: url('../images/index/dzen.webp');
+    background-image: url('../images/styleguide/merch_1.webp');
+    background-image: url('../images/styleguide/merch_3.webp');
+    background-image: url('../images/styleguide/merch_2.webp');
+    background-image: url('../images/styleguide/merch_4.webp');
+    background-image: url('../images/styleguide/merch_2.webp');
+    background-image: url('../images/styleguide/merch_2.webp');
     
     
   }
