--- a/src/stylesheets/sound.scss
+++ b/src/stylesheets/sound.scss
@@ -37,9 +37,15 @@ body.index {
         background-color: #B0EB00;
     }
 
+
     .table {
-        .div2, .div3, .div4, .div5, .div6{ 
+        .div1, .div2, .div3, .div4, .div5, .div6{ 
             height: 3vw;
         }
     }
+
+  .razdel {
+    font-weight: 700;
+      color: #000000;
+  }
 }
