--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -49,8 +49,9 @@ div, p {
     padding: 10px;
     padding-right: 10vw;
     padding-top: 10px;
-    margin-top: 4em;
+    margin-top: 8em;
     width: 40%;
+    height: fit-content;
     background-color: #B0EB00;
 
 }
@@ -80,7 +81,7 @@ div, p {
     opacity: 0.9;
 }
 
-.div1_3 img, .div1_2 img, .div2_2 img{
+.div1_3 img, .div1_2 img, .div2_2 img {
     width: 100%;
 }
 
@@ -227,8 +228,12 @@ footer {
     }
 
     .chascha1 {
-        font-size: 30vw;
-        margin-top: -20vw;
+        font-size: 50vw;
+        margin-top: -47vw;
+    }
+
+    .menu{
+       margin-top: 20vw;
     }
 
     .chascha2 {
