--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -21,6 +21,11 @@ body.index {
   
 }
 
+.razdel {
+    font-weight: 700;
+    color: #000000;
+}
+
 
 body {
     background-image: url(../images/index/background.gif);
@@ -53,6 +58,11 @@ a{
     mix-blend-mode: multiply;
 }
 
+.hashtags {
+    display: inline;
+    font-size: 0.7rem;
+}
+
 
 
 input[type] {
@@ -68,10 +78,11 @@ input::placeholder {
 .table {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr repeat(5, 1fr); 
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: min-content repeat(5, 1fr); 
+    grid-auto-rows: 3vw repeat(auto-fill, 13vw);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    align-content: start;
 }
 
 .table div {
@@ -83,17 +94,46 @@ input::placeholder {
     padding: 3px;
 }
 
-.table :hover {
+.table{
+    .div1, .div7, .div13, .div19 , .div25, .div31 {
+        width: 3vw;
+    }
+}
+
+
+.table div:hover {
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(176,235,0,1) 100%);
 }
 
+
+.table div p {
+    z-index: 2;
+}
+
+.table div:hover p, .table div:hover a {
+    mix-blend-mode: normal;
+}
+
 .table div:nth-child(6n + 1) {
     border: none; 
-    display:  flex;
-    justify-content: flex-end;
-    align-items:  center;
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center;
+    position: relative; 
+    padding-right: 5px; 
 }
+
+.table div:nth-child(6n + 1) > p {
+    transform: rotate(-90deg);
+    transform-origin: right top;
+    margin: 0; 
+    position: absolute; 
+    right: 3vw;
+    top: 50%;
+    transform: translate(0, -50%) rotate(-90deg);
+}
+
 
 .table div:nth-child(6n + 1):hover {
     background: none;
@@ -101,14 +141,11 @@ input::placeholder {
 }
 
 
-.table div:nth-child(6n + 1) > p {
-    transform: rotate(-90deg);
-}
-
 .main_screen{
     padding: 20px;
     display: flex;
     justify-content: flex-start;
+    gap: 5vw;
 }
 
 .div2 img, .div16 img, .div27 img {
@@ -185,6 +222,39 @@ footer {
     padding: 20px;
 }
 
+#div2 #image-container {
+    padding: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    align-items: start;
+}
+
+#div2 #image-container > p {
+    position: absolute;
+    top: 0;
+    align-items: start;
+    margin: 0;
+    padding: 0%;
+    transform: none;
+    opacity: 0; /* Изначально скрыто */
+    visibility: hidden; /* Изначально скрыто */
+    color: #fff;
+    transition: opacity 0.3s ease, visibility 0.3s ease; /* Плавный переход */
+}
+
+#div2 #image-container:hover img {
+    opacity: 0; /* Скрываем изображение при наведении */
+}
+
+#div2 #image-container:hover p {
+    opacity: 1; /* Показываем текст при наведении */
+    visibility: visible; /* Показываем текст при наведении */
+}
+
+
+
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .table {
         grid-template-columns: repeat(5, 1fr); 
@@ -207,6 +277,19 @@ footer {
 
 
 @media screen and (max-width: 767px) {
+
+    .main_screen {
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 3vw;
+    }
+
+
+
+    .table div {
+        height: 20vw;
+    }
+
     .table {
         grid-template-columns: repeat(4, 1fr); 
     }
