--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -42,7 +42,7 @@
 }
 
 @font-face {
-  font-family: 'PT Root UI';
+  font-family: 'Arial Narrow';
   src: url('../fonts/arialnarrow_bold.ttf') format('ttf');
   font-weight: 700;
   font-style: normal;
@@ -57,7 +57,7 @@
 }
 
 @font-face {
-  font-family: 'PT Root UI';
+  font-family: 'Arial Narrow';
   src: url('../fonts/arialnarrow_bolditalic.ttf') format('ttf');
   font-weight: 700;
   font-style: italic;
