--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -35,30 +35,29 @@
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/ofont.ru_Arial\ Narrow.ttf') format('ttf');
+  src: url('../fonts/ofont.ru_Arial\ Narrow.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
-  
 }
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/arialnarrow_bold.ttf') format('ttf');
+  src: url('../fonts/Arial_Narrow_Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/arialnarrow_italic.ttf') format('ttf');
+  src: url('../fonts/Arial_Narrow_Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
-  
 }
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/arialnarrow_bolditalic.ttf') format('ttf');
+  src: url('../fonts/Arial_Narrow_BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
+
