--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -42,21 +42,21 @@
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/Arial_Narrow_Bold.ttf') format('truetype');
+  src: url('../fonts/arialnarrow_bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/Arial_Narrow_Italic.ttf') format('truetype');
+  src: url('../fonts/arialnarrow_italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Arial Narrow';
-  src: url('../fonts/Arial_Narrow_BoldItalic.ttf') format('truetype');
+  src: url('../fonts/arialnarrow_bolditalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
