--- a/src/stylesheets/components/S_superOrganisms.scss
+++ b/src/stylesheets/components/S_superOrganisms.scss
@@ -30,3 +30,14 @@
 .S_MerchBlock{
     
 }
+
+
+
+
+.S_Cards{
+  width: 100%;
+  padding: 2vw;
+  display: flex;
+  gap: 1vw;
+  margin-top: 5vw;
+}
