--- a/src/stylesheets/components/W_wrapper.scss
+++ b/src/stylesheets/components/W_wrapper.scss
@@ -3,3 +3,16 @@
         margin-left: 38%;
         margin-bottom: -10%;
 }
+
+.W_CardDescription {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.W_Socials {
+    display: flex;
+    gap: 10px;
+    padding: 2vw;
+}
