--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -10,57 +10,9 @@ body.index {
   }
 }
 
-.main{
-  body {
-    overflow: hidden;
-  }
-  a{
-    margin-top: 11%;
-    
-  }
-  
-}
-
-.razdel {
-    font-weight: 700;
-    color: #000000;
-}
-
-
 body {
-    background-image: url(../images/index/background.gif);
-    background-attachment: fixed;
+    background-image: url(../images/index/Q_Gradient.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center; 
-}
-
-.menu{
-    padding: 0%;
-    margin: 0%;
-    left: 0;
-}
-
-.menu p,.menu li a, .menu li p{
-    width: fit-content;
-    background-color: #B0EB00;
-    color: black;
-    text-decoration: none;
-    line-height: 1.5;
-}
-
-a{
-    color: black;
-}
-
-.table p, .table a{
-    color: white;
-    mix-blend-mode: multiply;
-}
-
-.hashtags {
-    display: inline;
-    font-size: 0.7rem;
 }
 
 
@@ -73,137 +25,9 @@ input[type] {
 
 input::placeholder {
     color: #B0EB00;
+
 }
 
-.table {
-    width: 100%;
-    display: grid;
-    grid-template-columns: min-content repeat(5, 1fr); 
-    grid-auto-rows: 3vw repeat(auto-fill, 13vw);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    align-content: start;
-}
-
-.table div {
-    border: 1.5px solid #B0EB00; 
-    display: block;
-    width: 100%;
-    height: 13vw;
-    overflow: visible;
-    padding: 3px;
-}
-
-.table{
-    .div1, .div7, .div13, .div19 , .div25, .div31 {
-        width: 3vw;
-    }
-}
-
-
-.table div:hover {
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(176,235,0,1) 100%);
-}
-
-
-.table div p {
-    z-index: 2;
-}
-
-.table div:hover p, .table div:hover a {
-    mix-blend-mode: normal;
-}
-
-.table div:nth-child(6n + 1) {
-    border: none; 
-    display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    position: relative; 
-    padding-right: 5px; 
-}
-
-.table div:nth-child(6n + 1) > p {
-    transform: rotate(-90deg);
-    transform-origin: right top;
-    margin: 0; 
-    position: absolute; 
-    right: 3vw;
-    top: 50%;
-    transform: translate(0, -50%) rotate(-90deg);
-}
-
-
-.table div:nth-child(6n + 1):hover {
-    background: none;
-    background-color: transparent;
-}
-
-
-.main_screen{
-    padding: 20px;
-    display: flex;
-    justify-content: flex-start;
-    gap: 5vw;
-}
-
-.div2 img, .div16 img, .div27 img {
-    width: 100%;
-}
-
-.gradient {
-    padding: 0;
-    margin: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-}
-
-.chascha {
-    color: white;
-    font-size: 60px;
-    margin-bottom: 30px;
-    letter-spacing: -6px;
-    font-weight: 700;
-    margin-left: 20px;
-}
-
-#my-form {
-    margin-top: 100px;
-    margin-left: 400px;
-}
-
-#form_text {
-    padding-bottom: 5px;
-    color: #B0EB00;
-}
-
-.email {
-    padding: 5px;
-    width: 400px;
-}
-
-#my-form-button {
-    height: 40px;
-    background-color: #B0EB00;
-    color: #000000;
-    border: none;
-}
-
-#my-form-button1 {
-    background-image: url(../images/index/finder.png);
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-    background-color: #1d1d1d;
-    width: 100%;
-    margin-left: 0;
-    margin-top: 100px;
-}
 
 .names {
     padding: 25px;
@@ -222,111 +46,5 @@ footer {
     padding: 20px;
 }
 
-#div2 #image-container {
-    padding: 0;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    align-items: start;
-}
-
-#div2 #image-container > p {
-    position: absolute;
-    top: 0;
-    align-items: start;
-    margin: 0;
-    padding: 0%;
-    transform: none;
-    opacity: 0; /* Изначально скрыто */
-    visibility: hidden; /* Изначально скрыто */
-    color: #fff;
-    transition: opacity 0.3s ease, visibility 0.3s ease; /* Плавный переход */
-}
-
-#div2 #image-container:hover img {
-    opacity: 0; /* Скрываем изображение при наведении */
-}
-
-#div2 #image-container:hover p {
-    opacity: 1; /* Показываем текст при наведении */
-    visibility: visible; /* Показываем текст при наведении */
-}
 
 
-
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .table {
-        grid-template-columns: repeat(5, 1fr); 
-    }
-
-    .table div:nth-child(6n) {
-        display: none;
-    }
-
-    #my-form {
-        margin-top: 50px;
-        margin-left: 10px;
-        margin-bottom: 100px;
-    }
-
-    .email {
-        width: 300px;
-    }
-}
-
-
-@media screen and (max-width: 767px) {
-
-    .main_screen {
-        flex-direction: column;
-        justify-content: flex-start;
-        gap: 3vw;
-    }
-
-
-
-    .table div {
-        height: 20vw;
-    }
-
-    .table {
-        grid-template-columns: repeat(4, 1fr); 
-    }
-
-    .table div:nth-child(6n), 
-    .table div:nth-child(6n - 1) {
-        display: none; 
-    }
-
-    .menu p,.menu li a, .menu li p{
-        font-size: 20px;
-    }
-
-
-    #my-form {
-        margin-top: 50px;
-        margin-left: 10px;
-        margin-bottom: 100px;
-    }
-
-    .table a, .table p{
-        font-size: 16px;
-    }
-
-    .email {
-        width: 200px;
-    }
-
-    .names a{
-        font-size: 16px;
-    }
-
-    input {
-        font-size: 16px;
-    }
-
-    #form_text {
-        font-size: 16px;
-    }
-}
