--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -12,12 +12,12 @@ body{
   font-style: normal;
 }
 
+
 a,p, label, button, input{
   font-family: 'Arial Narrow', Helvetica, sans-serif;
   font-size: 1.4vw;
   font-weight: 100;
-  
-  
+  color: black;
 }
 
 h1,h2{
@@ -77,4 +77,15 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #A5D600; 
+}
+
+input[type] {
+  background-color: transparent ;
+  border: 2px solid #B0EB00 ;
+  padding: 5px;
+}
+
+input::placeholder {
+  color: #B0EB00;
+
 }
