--- a/src/stylesheets/components/M_molecules.scss
+++ b/src/stylesheets/components/M_molecules.scss
@@ -18,4 +18,28 @@
     display: flex;
     padding: 10px;
     gap: 10px;
-}
+    cursor: pointer;
+    position: relative; 
+    overflow: hidden; 
+    transition: opacity 0.3s ease; 
+  
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(to bottom, #B0EB00, white);
+      opacity: 0; 
+      transition: opacity 0.3s ease;
+      z-index: -1;
+    }
+  
+    &:hover {
+      &::before {
+        opacity: 1; 
+      }
+    }
+  }
+
