--- a/src/stylesheets/components/A_atoms.scss
+++ b/src/stylesheets/components/A_atoms.scss
@@ -103,3 +103,69 @@
       }
   }
   
+
+.A_SideImg {
+    width: 50px;
+    height: 50px;;
+}
+
+.A_SideImg img{
+    width: 50px;
+    height: 50px;;
+}
+
+.A_ArticleImg {
+    width: 100%;
+    height: auto;
+}
+
+.A_ArticleImg img{
+    width: 100%;
+    height: 100%;
+}
+
+.A_MainTitle {
+    padding-left: 2vw;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.A_Summary {
+    padding: 10px;
+    padding-bottom: 40px;
+    background-image: linear-gradient( to bottom,
+        #B0EB00 0%, 
+        #B0EB00 70%,
+        white 90%,
+        white 100%
+      )
+}
+
+.A_SideTitle{
+    font-style: italic;
+}
+
+.A_SideTags p {
+    font-size: 32px;
+}
+
+.A_Resources a{
+    font-style: italic;
+    color: #B0EB00;
+    text-decoration: underline;
+    
+}
+
+.A_Resources {
+    display: inline;
+    
+}
+
+.A_ArticleTitle {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.A_ArticleText {
+    font-size: 20px;
+}
