--- a/src/stylesheets/components/O_organisms.scss
+++ b/src/stylesheets/components/O_organisms.scss
@@ -4,3 +4,12 @@
     flex-direction: column;
     gap: 20px;
 }
+
+.O_Article {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding-left: 60px;
+    padding-right: 60px;
+}
