--- a/src/stylesheets/components/W_wrapper.scss
+++ b/src/stylesheets/components/W_wrapper.scss
@@ -16,3 +16,11 @@
     gap: 10px;
     padding: 2vw;
 }
+
+.W_SideBar {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-right: 30px;
+}
