--- a/src/stylesheets/components/S_superOrganisms.scss
+++ b/src/stylesheets/components/S_superOrganisms.scss
@@ -47,3 +47,11 @@
     gap: 20px;
     padding: 2vw;
 }
+
+.tests{
+.S_TestCards{
+  display:inline-flex;
+  justify-content: space-between;
+
+}
+}
