--- a/src/stylesheets/components/W_wrapper.scss
+++ b/src/stylesheets/components/W_wrapper.scss
@@ -24,3 +24,9 @@
     gap: 20px;
     padding-right: 30px;
 }
+
+@media screen and (max-width: 999px) {
+    .W_SideBar {
+        width: 100%;
+    }
+  }
