advices, tests, middle articles

--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -92,6 +92,14 @@ input::placeholder {
 }
 
 
-&#bgWEBP {
+&#bgPNG {
   background-image: url('../images/tests/test_lakes.webp');
+  background-image: url('../images/tests/question_box.webp');
+  background-image: url('../images/tests/test_yavlenia.webp');
+  background-image: url('../images/tests/test_fly.webp');
+  background-image: url('../images/advice/to_do.webp');
+  
+  
 }
+
+
