--- a/src/stylesheets/components/Q_quarqs.scss
+++ b/src/stylesheets/components/Q_quarqs.scss
@@ -4,3 +4,10 @@
     margin-bottom: 49%;
     
 }
+
+.Q_QuestionBox{
+    z-index: -1;
+    position: absolute;
+    margin-top: -5%;
+    margin-left: -5%;
+  }
