--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -98,6 +98,10 @@ input::placeholder {
   background-image: url('../images/tests/test_yavlenia.webp');
   background-image: url('../images/tests/test_fly.webp');
   background-image: url('../images/advice/to_do.webp');
+  background-image: url('../images/tests/baikal.webp');
+  background-image: url('../images/tests/galo.webp');
+  background-image: url('../images/tests/fly.webp');
+  background-image: url('../images/advice/to_do.webp');
   
   
 }
