--- a/src/stylesheets/components/A_atoms.scss
+++ b/src/stylesheets/components/A_atoms.scss
@@ -181,10 +181,81 @@
       }
 }
 
+@media screen and (min-width: 1440px)and (max-width: 1919px){
+    .A_Image{
+        width: 20%;
+        margin-left: 2%;
+        margin-top: 5%;
+        cursor: pointer;
+        transition: opacity 0.2s ease;
+        &:hover {
+            opacity: 0.7;
+          }
+    }
+
+    
+    }
+@media screen and (min-width: 1366px)and (max-width: 1439px){
+
+}
+
+@media screen and (min-width: 1024px)and (max-width: 1365px){
+
+
+}
+
+@media screen and (min-width: 768px)and (max-width: 1023px){
+    .A_TitleTest{
+        margin-left: 1%;
+        margin-top: 1%;
+        font-size: 3.2vw;
+        cursor: pointer;
+        
+        transition: opacity 0.2s ease;
+        &:hover {
+            opacity: 0.7;
+          }
+    }
+    
+    .A_TitleTag{
+        margin-left: 1%;
+        margin-top: 0.5%;
+        font-size: 2.3vw;
+    }            
+}
+@media screen and (min-width: 414px)and (max-width: 767px){
+   
+    .A_TitleTest{
+        margin-left: 1%;
+        margin-top: 1%;
+        font-size: 3.2vw;
+        cursor: pointer;
+        
+        transition: opacity 0.2s ease;
+        &:hover {
+            opacity: 0.7;
+          }
+    }
+    
+    .A_TitleTag{
+        margin-left: 1%;
+        margin-top: 0.5%;
+        font-size: 2.3vw;
+    }            
+}
+@media screen and (min-width: 360px)and (max-width: 413px){ 
+   
+}
+@media screen and (min-width: 0px)and (max-width: 359px){ 
+
+}
+
+}
+
 
 .A_TitleTest{
     margin-left: 1%;
-    margin-top: -1%;
+    margin-top: 1%;
     font-size: 1.9vw;
     cursor: pointer;
     
@@ -199,7 +270,7 @@
     margin-top: 0.5%;
     font-size: 1.3vw;
 }
-}
+
 
 
 
@@ -308,13 +379,7 @@
 }
     
    
-    
-    
-
-
-  
-
-        .A_FlyImage{
+.A_FlyImage{
             z-index:-1;
             width: 90%;
             margin-left: 10%;
@@ -322,11 +387,12 @@
             height: 70%;
             
         
-        }
-        .A_FlyImage1{
+}
+
+.A_FlyImage1{
             width: 90%;
             margin-left: 17%;
-        }
+}
 
 
 .medium_article{
